hw2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otushealth
  labels:
    app: otushealth
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: otushealth
  template:
    metadata:
      labels:
        app: otushealth
    spec:
      containers:
        - name: otushealth
          image: glacius27/repo:stable
          ports:
          - containerPort: 8000
