hw2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otushealth
  labels:
    app: otushealth
spec:


  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: otushealth
  type: ClusterIP
