hw2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: otushealth
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: otushealth
            port:
              number: 8000
  ingressClassName: nginx
